--- a/codex-rs/app-server-protocol/schema/json/v1/GetUserSavedConfigResponse.json
+++ b/codex-rs/app-server-protocol/schema/json/v1/GetUserSavedConfigResponse.json
@@ -95,6 +95,16 @@
             }
           ]
         },
+        "modelServiceTier": {
+          "anyOf": [
+            {
+              "$ref": "#/definitions/ServiceTier"
+            },
+            {
+              "type": "null"
+            }
+          ]
+        },
         "modelVerbosity": {
           "anyOf": [
             {
@@ -178,6 +188,15 @@
       },
       "type": "object"
     },
+    "ServiceTier": {
+      "description": "Controls latency/cost class for OpenAI Responses API requests. Serialized with lowercase values to match the OpenAI API.",
+      "enum": [
+        "auto",
+        "default",
+        "flex"
+      ],
+      "type": "string"
+    },
     "Tools": {
       "properties": {
         "viewImage": {
@@ -243,6 +262,16 @@
           "anyOf": [
             {
               "$ref": "#/definitions/ReasoningSummary"
+            },
+            {
+              "type": "null"
+            }
+          ]
+        },
+        "modelServiceTier": {
+          "anyOf": [
+            {
+              "$ref": "#/definitions/ServiceTier"
             },
             {
               "type": "null"
