--- a/codex-rs/app-server-protocol/schema/json/v2/ConfigReadResponse.json
+++ b/codex-rs/app-server-protocol/schema/json/v2/ConfigReadResponse.json
@@ -158,6 +158,16 @@
             }
           ]
         },
+        "model_service_tier": {
+          "anyOf": [
+            {
+              "$ref": "#/definitions/ServiceTier"
+            },
+            {
+              "type": "null"
+            }
+          ]
+        },
         "model_verbosity": {
           "anyOf": [
             {
@@ -482,6 +492,16 @@
             }
           ]
         },
+        "model_service_tier": {
+          "anyOf": [
+            {
+              "$ref": "#/definitions/ServiceTier"
+            },
+            {
+              "type": "null"
+            }
+          ]
+        },
         "model_verbosity": {
           "anyOf": [
             {
@@ -568,6 +588,15 @@
         }
       },
       "type": "object"
+    },
+    "ServiceTier": {
+      "description": "Controls latency/cost class for OpenAI Responses API requests. Serialized with lowercase values to match the OpenAI API.",
+      "enum": [
+        "auto",
+        "default",
+        "flex"
+      ],
+      "type": "string"
     },
     "ToolsV2": {
       "properties": {
