--- a/.github/workflows/private-source-cloud-build.yml
+++ b/.github/workflows/private-source-cloud-build.yml
@@ -63,7 +63,11 @@ jobs:
         run: |
           set -euo pipefail
           sudo apt-get update
-          sudo apt-get install -y --no-install-recommends tmux ca-certificates
+          sudo DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
+            tmux \
+            ca-certificates \
+            pkg-config \
+            libcap-dev
 
       - name: Configure SSH for private source clone
         shell: bash
